[package]
name = "scan2blob"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_core = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_storage_datalake = "0.21.0"
clap = "4.5.47"
dav-server = "0.8.0"
hyper = "1.7.0"
hyper-util = "0.1.16"
internal-russh-forked-ssh-key = "0.6.11"
jiff = "0.2.15"
md-5 = "0.10.6"
russh = "0.54.3"
russh-sftp = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["io-util", "net", "process", "rt", "signal", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }
