[package]
name = "scan2blob"
version = "0.1.0"
edition = "2024"

[features]
webdav-props = []

[dependencies]
azure_core = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
base64 = "0.22.1"
bytes = "1.10.1"
clap = "4.5.47"
daemonize = "0.5.0"
dav-server = "0.8.0"
futures = "0.3.31"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.16", features = ["http1", "http2", "server", "server-auto"] }
internal-russh-forked-ssh-key = "0.6.11"
jiff = "0.2.15"
md-5 = "0.10.6"
regex = "1.11.2"
russh = "0.54.3"
russh-sftp = "2.1.1"
rustls = { version = "0.23.32", features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
sha-crypt = "0.5.0"
syslog = "7.0.0"
tokio = { version = "1.47.1", features = ["io-util", "net", "process", "rt", "signal", "sync", "time"] }
tokio-rustls = "0.26.3"
